[tool.poetry]
name = "health-data"
version = "0.1.0"
description = "Playing with data and Python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyscopg2 = "^66.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
