[tool.poetry]
name = "health-data"
version = "0.1.0"
description = "Playing with data and Python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.2.1"
psycopg2 = "^2.9.9"
requests = "^2.32.3"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
